--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
+    id "com.android.application"
+    id "kotlin-android"
+    id "kotlin-android-extensions"
+    id "androidx.navigation.safeargs.kotlin"
+    id "kotlin-kapt"
 }
 
 android {
@@ -43,9 +46,40 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // Room Component
+    implementation "androidx.room:room-runtime:2.4.0-beta01"
+    annotationProcessor "androidx.room:room-compiler:2.4.0-beta01"
+    kapt 'androidx.room:room-compiler:2.4.0-beta01'
+    implementation 'androidx.room:room-ktx:2.3.0'
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.4.0'
+
     // Navigation Component
     def nav_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Lifecycle components
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+    implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.4.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.6'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
+
+    // Kotlin Coroutines
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
+    // Timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.9'
+
+
+
 
 }
