--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,10 +76,14 @@ dependencies {
     // Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    // Gson
-    implementation 'com.google.code.gson:gson:2.8.9'
+    // Moshi
+    implementation 'com.squareup.moshi:moshi:1.12.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
 
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
-
+    // Retrofit Moshi Adapter
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
 }
