--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,5 +85,11 @@ dependencies {
 
     // Retrofit Moshi Adapter
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    //Moshi
+    def moshi_version = "1.8.0"
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:$moshi_version")
+    implementation "com.squareup.moshi:moshi:$moshi_version"
+    implementation "com.squareup.moshi:moshi-adapters:$moshi_version"
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 
 }
